# WeeKI

./: .env.development  .env.example  .env.production  .gitignore  Dockerfile  README.md  SELF_HOSTING.md  deploy.sh  docker-compose.yml  index.html  nginx.conf  pyproject.toml  test_runner.py
tests/: test_basic.py
weeki/: __init__.py  agents.py  cli.py  config.py  database.py  monitoring.py  server.py
