[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weeki"
version = "0.1.0"
description = "Wee, Kunstig Intelligens - AI Agent Orchestration System"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kevin", email = "kevin@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langgraph>=0.0.65",
    "langchain>=0.1.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/pynezz/WeeKI"
Repository = "https://github.com/pynezz/WeeKI"
Issues = "https://github.com/pynezz/WeeKI/issues"

[project.scripts]
weeki = "weeki.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["weeki*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true